# dustbox-vst

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Source/Core/: BuildConfig.h  Version.h
Source/Dsp/modules/: DirtModule.cpp  DirtModule.h  NoiseModule.cpp  NoiseModule.h  PumpModule.cpp  PumpModule.h  ReverbModule.cpp  ReverbModule.h  TapeModule.cpp  TapeModule.h
Source/Dsp/routing/: ProcessingGraph.h
Source/Dsp/utils/: DenormalGuard.h  MathHelpers.h  NoiseGenerator.h  ParameterSmoother.h
Source/Parameters/: ParameterIDs.h  ParameterLayout.h  ParameterSpec.h
Source/Plugin/: DustboxEditor.cpp  DustboxEditor.h  DustboxProcessor.cpp  DustboxProcessor.h  HostTempo.h
Source/Presets/: FactoryPresets.cpp  FactoryPresets.h
Source/Ui/: GenericControls.cpp  GenericControls.h
cmake/: JuceWarningPatches.cmake  ToolchainWarnings.cmake
docs/adr/: 0001-initial-architecture.md  0002-juce-warning-patching.md  0003-safe-install-flow.md  0004-noise-routing-options.md  0005-factory-presets.md  0006-reverb-module.md
scripts/: clean-build.ps1
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: PresetValueTreeCheck.cpp
